--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:ital,wght@0,900;1,900&family=IBM+Plex+Serif&family=Source+Serif+Pro&family=Roboto+Slab:wght@400;700&family=Noto+Serif:wght@400,700&family=Lora:wght@700&family=Montserrat:ital,wght@0,500;0,900;1,900&family=Public+Sans:ital,wght@0,900;1,900&family=Roboto:ital,wght@0,900;1,900&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" sizes="180x180">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="%PUBLIC_URL%/favicon.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicon.png" color="#0D0106">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+    <meta name="theme-color" content="#0D0106">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Dario Villar </title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal Page - Dario Villar"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
