--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYNFPF5L03"></script>
-    <script>
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYNFPF5L03"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-SYNFPF5L03');
-    </script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <meta charset="utf-8" />
-     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" sizes="180x180">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="%PUBLIC_URL%/favicon.png">
-    <link rel="mask-icon" href="%PUBLIC_URL%/favicon.png" color="#0D0106">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
-    <meta name="theme-color" content="#0D0106">
+  </script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:wght@100;300;400;500;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" sizes="180x180">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon.png">
+  <link rel="mask-icon" href="%PUBLIC_URL%/favicon.png" color="#0D0106">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+  <meta name="theme-color" content="#0D0106">
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Dario Villar </title>
-    <meta
-      name="description"
-      content="Personal Page - Dario Villar"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Dario Villar </title>
+  <meta name="description" content="Personal Page - Dario Villar" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -47,12 +43,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -62,5 +59,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
